--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,6 +1,7 @@
+numpy==1.24.3
+pandas==2.0.2
 fastapi==0.95.2
 uvicorn==0.22.0
 scikit-learn==1.2.2
 xgboost==1.7.5
-pandas==2.0.2
 python-multipart==0.0.6
