--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
         "electron": "^25.0.0",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
+        "react-dropzone": "^14.3.5",
         "recharts": "^2.13.3"
     },
     "devDependencies": {
