--- a/.gitignore
+++ b/.gitignore
@@ -5,13 +5,17 @@ node_modules/
 /backend/#
 /backend/explicitly
 /backend/using
+/backend/build
 /backend/model.json
 __pycache__/
 *.py[cod]
+backend.spec
 
 # Production build
 /dist
+/backend-dist
 /build
+/releases
 
 # Environment files
 .env
